# INF2102

./: .gitignore  README.md  cenarios-validacao-simulador-v1.xlsx  justfile  justfile copy  package-lock.json  read_excel.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/backup/: 02b8683004c8_migration.py
backend/alembic/versions/: 13660b71bf4e_initial.py  22739fa15ad3_migration.py  3c7f1d17bf1c_migration.py  56f851854806_migration.py  6a28883356a9_migration.py  79bfe6944af4_migration.py  8852678c36a5_migration.py  9ab5bd6b1f34_migration.py  9dcd4f9e6529_migration.py  9f9622885385_migration.py  a46b2aa8d69f_migration.py  a494bc4d8e25_migration.py  aff604627b28_migration.py  c57d91d006e6_migration.py  ca8c0809037c_migration.py  d268237e20cc_migration.py  f16724225e7c_migration.py  f364f7333bac_migration.py  fc128bbe7963_migration.py  ff7bad870e75_migration.py
backend/app/: main.py
backend/app/admin/: __init__.py  auth.py  views.py
backend/app/api/: aterros_sanitarios.py  ecoparques.py  plants.py  pontos_entrega.py  simulation.py  usinas_alcool.py
backend/app/data/: __init__.py  defaults.py  icms_rates.py
backend/app/db/: session.py
backend/app/models/base/: __init__.py  (+4 more)
backend/app/schemas/: aterros_sanitarios.py  destinations.py  ecoparques.py  plants.py  pontos_entrega.py  simulation.py  usinas_alcool.py
backend/app/services/: aterros_sanitarios_service.py  ecoparques_service.py  plants_service.py  pontos_entrega_service.py  simulation.py  usinas_alcool_service.py
backend/data_migration/: data_migration.ipynb
(+97 files in other folders)
