[tool.poetry]
name = "simbio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.121.3,<0.122.0"
sqlalchemy = "^2.0"
alembic = ">=1.17.2,<2.0.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
psycopg2-binary = "^2.9.11"
geoalchemy2 = "^0.18.1"
pandas = "^2.3.3"
sqladmin = "^0.22.0"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
